fixing dark mode and adding favicon

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1,16 +1,16 @@
 
 :root {
-      --bg-color: #ffffff;
+      --bg-color: #f5f2f2;
       --text-color: #000000;
-      --link-color: #1a0dab;
-      --code-bg: #f4f4f4;
+      --link-color: #2718d0;
+      --code-bg: #e4e1e1;
     }
     
     .dark-theme {
-      --bg-color: #121212;
-      --text-color: #e0e0e0;
-      --link-color: #8ab4f8;
-      --code-bg: #1e1e1e;
+      --bg-color: #291717;
+      --text-color: #f7f1f1;
+      --link-color: #83b1f9;
+      --code-bg: #392b2b;
     }
     
     body {
